Fixed Vinicius name error

--- a/SP.html
+++ b/SP.html
@@ -35,7 +35,7 @@
                 'Eike Henrique Souza da Rocha', 'Felipe da Silva Furlani', 'Gabriel Joquebidis Farias', 'Gilmar da Silva Filho', 'Grazieli de Freitas Martins', 'Nallin', 'Heitor Gomes de Oliveira', 'Isabela Silvestre Rodrigues', 'Isabella Bergamin Freitas',
                 'Ormo', 'Laura Nogueira Pereira', 'Leonardo Domingues de Oliveira', 'Luan Silva Ribeiro', 'Luanna Sachinelli Paggiaro', 'Matheus Vitório Figueiredo de Oliveira', 'Mika!', 'Nat',
                 'Nelson Luís Modenez Júnior', 'Nelson Modenez Neto', 'Newton Eduardo Pena Villegas', 'Nina de Oliveira Venelli', 'Meida!', 'Mello', 'Parra', 'Renato Oliveira dos Santos',
-                'Ricardo Tadei Romero', 'Samuel Pereira Camargo', 'Vinícius Miguel dos Santos Montecino, Vitor Baltazar Bergamini'];
+                'Ricardo Tadei Romero', 'Samuel Pereira Camargo', 'Vinícius Miguel dos Santos Montecino', 'Vitor Baltazar Bergamini'];
 
             const SP_Chars = ['Kenny McCormick', 'Eric Cartman', 'Kyle Broflovski', 'Stan Marsh', 'Pip Pirrip'];
             while (counter < length) {
